helm/charts/argo/argo-cd/resources/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-helm-ui
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`argocd.chonk.city`)
      priority: 10
      services:
        - name: argo-cd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.chonk.city`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argo-cd-server
          port: 80
          scheme: h2c
  tls:
    secretName: chonk-city-tls
